Add Button to Generate Sample Data in Backend